# olliesranch

./: README.md
LazyTree/: app.py  pyproject.toml
LazyTree/instance/: mydatabase.db  tasks.db
LazyTree/static/: script.js  style.css
LazyTree/templates/: index.html
