[tool.poetry]
name = "lazytree"
version = "0.1.0"
description = ""
authors = ["maregrizzle <maregrizzle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-cors = "^4.0.0"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
